# wasm-gameoflife

./: Cargo.toml  index.html  script.js  styles.css
pkg/: package.json  wasm_gameoflife.d.ts  wasm_gameoflife.js  wasm_gameoflife_bg.wasm  wasm_gameoflife_bg.wasm.d.ts
src/: lib.rs
